# obligatorio-p4

./: Bruja.cpp  Bruja.h  CMakeLists.txt  Comun.cpp  Comun.h  DiccioBrujas.cpp  DiccioBrujas.h  EnumError.cpp  EnumError.h  Error.cpp  Error.h  Especial.cpp  Especial.h  Fachada.cpp  Fachada.h  Fecha.cpp  Fecha.h  Hechizo.cpp  Hechizo.h  Iterador.cpp  Iterador.h  Menu.cpp  Menu.h  README.md  SecHechizo.cpp  SecHechizo.h  Suprema.cpp  Suprema.h  main-test.cpp  main.cpp
